contour-timeout/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    projectcontour.io/response-timeout: "10s"
spec:
  rules:
    - host: babu.example.com
      http:
        paths:
          - path: /my-path
            pathType: Prefix
            backend:
              service:
                name: my-app
                port:
                  name: http
